fix overflow in <pre> element

--- a/assets/main.css
+++ b/assets/main.css
@@ -280,6 +280,10 @@ code {
   white-space: pre-wrap;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 kbd {
   font-family: system-ui;
   background-color: var(--color-white);
